small addition to the content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Coursera by Paolo</title>
 </head>
 <body>
-<h1>Learning from COURSERA.</h1>
+<h1>Learning from COURSERA. Now this is a addition.</h1>
 </body>
 </html>
